# Star-Chart-Spherical-Projection

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  environment.yml  generate_examples_star_chart.py  pyproject.toml  requirements.txt  setup.py  test_generate_star_chart.py
.github/: codecov.yml
.github/workflows/: keep_data_up_to_date.yml  pytests.yml
examples/: star_final_position_data.csv
star-chart-spherical-projection/: generate_star_chart.py
star_chart_spherical_projection/: __init__.py  config.ini  declination_r_axis.py  error_handling.py  generate_star_chart.py  position_of_stars.py  ra_dec_precession_python27.py  ra_dec_precession_vondrak.py  starClass.py  test_generate_star_chart.py
star_chart_spherical_projection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
star_chart_spherical_projection/data/: 0_backup_links.csv  0_missing_manual.csv  1_iau_stars.csv  2_inthesky_star_data.csv  3_backup_star_data.csv  4_all_stars_data.csv  backup_links.csv  collect_data.py  convert_lst_to_csv_data.py  star_data.csv  star_properties.csv  stars_with_data.csv  web_scrap_iau_catalog.py  web_scrap_iau_catolog.py
star_chart_spherical_projection/pytests/: test_README.py  test_errorFinalPositionOfStars.py  test_errorPlotStereographicProjection.py  test_errorPredictPoleStar.py  test_errorStarClass.py  test_finalPositionOfStars.py  test_plotStereographicProjection.py  test_predictPoleStar.py  test_starClass.py  test_verifyConversions.py  test_verifyREADME.py  test_verifyRightAcension.py
star_chart_spherical_projection/pytests/examples/: year_0_stars_pos.csv
star_chart_spherical_projection/src/: declination_r_axis.py  error_handling.py  generate_star_chart.py
star_data/: convert_lst_to_csv_data.py
