[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools" ]

[project]
name = "star-chart-spherical-projection"
version = "v2.0.0"
description = "A Python package to generate circular astronomy star charts (past, present, and future) with spherical projection to correct for distortions with more than a hundred named stars accurate over 400,000 years with proper motion and precession of the equinoxes"
readme = "README.md"
keywords = [
  "astronomy",
  "precession",
  "proper motion",
  "python",
  "spherical projection",
  "star charts",
  "stereographic projection",
]

license = "MIT"
authors = [
  { name = "Cora Schneck", email = "cyschneck@gmail.com" },
]

requires-python = ">=3.10"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
  "beautifulsoup4",
  "matplotlib",
  "numpy",
  "pandas",
]

optional-dependencies.dev = [
  "pytest",
]
urls.Issues = "https://github.com/cyschneck/Star-Chart-Spherical-Projection/issues"
urls.Repository = "https://github.com/cyschneck/Star-Chart-Spherical-Projection"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "star_chart_spherical_projection" ]
exclude = [ "star_chart_spherical_projection/pytests*" ]
